--- a/Worksheet #3/RWorksheet_ShanCallao#3a.Rmd
+++ b/Worksheet #3/RWorksheet_ShanCallao#3a.Rmd
@@ -3,3 +3,215 @@ output:
   pdf_document: default
   html_document: default
 ---
+
+#                           Using Vectors
+
+#Number 1          
+#A
+first_11_letters <- LETTERS[1:11]
+first_11_letters
+#B
+odd_letters <- LETTERS[seq(from = 1, to = 26, by = 2)]
+odd_letters
+#C
+vowels <- c("A", "E", "I", "O", "U")
+vowel_letters <- letters[grep(pattern = paste(vowels, collapse = "|"), x = letters)]
+vowel_letters
+#D
+last_5_lower <- tail(letters, 5)
+last_5_lower
+#E
+between_15_to_24_lower <- letters[15:24]
+between_15_to_24_lower
+
+#Number 2
+#A
+city <- c("Tuguegarao City", "Manila", "Iloilo City", "Tacloban", "Samal Island", "Davao City")
+city
+#Output
+[1] "Tuguegarao City" "Manila"          "Iloilo City"    
+[4] "Tacloban"        "Samal Island"    "Davao City"
+
+#B
+temp <- c(42, 39, 34, 34, 30, 27)
+temp
+#Output
+[1] 42 39 34 34 30 27
+
+#C
+df <- data.frame(city, temp)
+df
+#Output
+              city temp
+1 Tuguegarao City   42
+2          Manila   39
+3     Iloilo City   34
+4        Tacloban   34
+5    Samal Island   30
+6      Davao City   27
+#D
+names(df) <- c("City", "Temperature")
+df
+#Output
+             City Temperature
+1 Tuguegarao City          42
+2          Manila          39
+3     Iloilo City          34
+4        Tacloban          34
+5    Samal Island          30
+6      Davao City          27
+
+#E
+str(df)
+#Output:
+'data.frame':	6 obs. of  2 variables:
+ $ City       : chr  "Tuguegarao City" "Manila" "Iloilo City" "Tacloban" ...
+ $ Temperature: num  42 39 34 34 30 27
+ 
+#F
+row_3 <- df[3, ]
+row_4 <- df[4, ]
+row_3
+row_4
+#Output
+> row_3
+         City Temperature
+3 Iloilo City          34
+> row_4
+      City Temperature
+4 Tacloban          34
+
+#G
+city_with_highest_temp <- df$City[which.max(df$Temperature)]
+city_with_lowest_temp <- df$City[which.min(df$Temperature)]
+city_with_highest_temp
+city_with_lowest_temp  
+#Output
+> city_with_highest_temp
+[1] "Tuguegarao City"
+> city_with_lowest_temp   
+[1] "Davao City"
+
+
+
+
+#                        Using Matrices
+
+#Number 2
+
+#A
+m <- matrix(c(1:8, 11:14), nrow = 3, ncol = 4, byrow = TRUE)
+m
+#Output
+      [,1] [,2] [,3] [,4]
+[1,]    1    2    3    4
+[2,]    5    6    7    8
+[3,]   11   12   13   14
+
+#B
+m <- m * 2
+m
+#Output
+      [,1] [,2] [,3] [,4]
+[1,]    1    2    3    4
+[2,]    5    6    7    8
+[3,]   11   12   13   14
+
+#C
+row_2 <- m[2, ]
+row_2
+#Output
+[1] 10 12 14 16
+
+#D
+cols_3_4_rows_1_2 <- m[1:2, 3:4]
+cols_3_4_rows_1_2
+#Output
+     [,1] [,2]
+[1,]    6    8
+[2,]   14   16
+
+#E
+cols_2_3_row_3 <- m[3, 2:3]
+cols_2_3_row_3
+#Output
+[1] 24 26
+
+#F
+col_4 <- m[, 4]
+col_4
+#Output
+[1]  8 16 28
+
+#G
+rownames(m) <- c("isa", "dalawa", "tatlo")
+colnames(m) <- c("uno", "dos", "tres", "quatro")
+#Output
+> rownames(m) <- c("isa", "dalawa", "tatlo")
+> colnames(m) <- c("uno", "dos", "tres", "quatro")
+
+#H
+dim(m) <- c(6, 2)
+m
+#Output
+     [,1] [,2]
+[1,]    2    6
+[2,]   10   14
+[3,]   22   26
+[4,]    4    8
+[5,]   12   16
+[6,]   24   28
+
+
+
+
+#                       Using Arrays
+
+#Number 3
+#A
+values <- c(1, 2, 3, 6, 7, 8, 9, 0, 3, 4, 5, 1)
+array_3d <- array(values, dim = c(2, 4, 3))
+#Output
+, , 1
+
+     [,1] [,2] [,3] [,4]
+[1,]    1    3    7    9
+[2,]    2    6    8    0
+
+, , 2
+
+     [,1] [,2] [,3] [,4]
+[1,]    3    5    1    3
+[2,]    4    1    2    6
+
+, , 3
+
+     [,1] [,2] [,3] [,4]
+[1,]    7    9    3    5
+[2,]    8    0    4    1
+
+
+#B: The array has three dimensions.
+
+#C
+dimnames(array_3d) <- list(c("a", "b"), LETTERS[1:4], c("1st-Dimensional Array", "2nd-Dimensional Array", "3rd-Dimensional Array"))
+#Output
+, , 1st-Dimensional Array
+
+  A B C D
+a 1 3 7 9
+b 2 6 8 0
+
+, , 2nd-Dimensional Array
+
+  A B C D
+a 3 5 1 3
+b 4 1 2 6
+
+, , 3rd-Dimensional Array
+
+  A B C D
+a 7 9 3 5
+b 8 0 4 1
+
+
